fixed some spacing

--- a/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
+++ b/Project-I-Social-Card/social-card/src/components/CardComponents/Card.css
@@ -1,6 +1,6 @@
 /* All styles for your Card Components live here */
 .card-container{
-    max-width: 600px;
+    max-width: 653px;
     min-width: 300px;
     border: 1px solid rgb(206, 206, 206);
     border-radius: 1%;
@@ -20,6 +20,6 @@
 }
 
 .card-content{
-    padding: 0px 60px 0px 60px;
+    padding: 0px 25px 0px 25px;
     margin-top: 0px;
 }
